--- a/Solution/style.css
+++ b/Solution/style.css
@@ -1,13 +1,33 @@
 body{
-   background-image: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.2) 50%), url('https://image.freepik.com/free-vector/hand-drawn-bricks-background_1176-82.jpg');
+  position:relative;
+  background: url(https://image.freepik.com/free-vector/hand-drawn-bricks-background_1176-82.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width:100%;
+  height:100%;
+  margin:0
+
+}
+body:after{
+  position:fixed;
+  content:"";
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  z-index:-1;
 }
 .logo{
     text-align: center;
     font-size: 800%;
-    color: cornflowerblue;
+    color: rgb(24, 8, 117);
+    text-shadow: blueviolet;
 }
 input {
     width: 4%;
+    border: 5px solid  rgb(4, 54, 56);
   }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -27,20 +47,27 @@ input[type=number] {
 div {
     padding-top: 8%;
     padding-left: 40%;
-    
 }
 
 .inputs_N_M{
     margin-top: 2%;
     margin-left: 2%;
-
+    border: 4px solid  rgb(223, 105, 9);
 }
 h2{
-  padding-top: 2%;
+  padding-top: 1%;
+  background-color: rgb(243, 243, 243);
+  display: inline-block;
+}
+.btnAut , .btnMan{
+  margin-left:1% ;
+  border: 4px solid  rgb(235, 48, 119);
 }
 .manualBtn{
   display: none;
-  margin-top: 3%;
+  margin-top: 2%;
+  margin-left: 2%;
+  border: 4px solid  rgb(90, 173, 11);
 }
 .canvas{
   margin-top: 3%;
